[tool.poetry]
name = "chroma-wdigets"
version = "0.1.0"
description = ""
authors = ["LiaoKong <568250549@qq.com>"]
readme = "README.md"
packages = [{include = "chroma_wdigets"}]

[tool.poetry.dependencies]
python = ">=2.7,<2.8 || >=3.6.0,<3.10"
six = "^1.16.0"
qt-py = "^1.3.8"

[tool.poetry.dev-dependencies]
pyside2 = "^5.15.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
