[tool.poetry]
name = "chroma-wdigets"
version = "0.1.0"
description = ""
authors = ["LiaoKong <568250549@qq.com>"]
readme = "README.md"
packages = [{include = "chroma_wdigets"}]

[tool.poetry.dependencies]
python = ">=2.7,<2.8 || >=3.6.0,<3.10"
six = "^1.16.0"
qt-py = "^1.3.8"

[tool.poetry.dev-dependencies]
pyside2 = "^5.15.2.1"
pytest-qt = {version = "^4.0.2", python = ">=3.6.0,<3.10"}
black = {version = "^21.12b0", python = ">=3.6.2,<3.10"}
isort = {version = "^5.10.1", python = ">=3.6.1,<3.10"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
